Completed 'using controlled components'. Cleaned up white space. Fixed minor CSS issues.

--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ body {
   border: 1px solid rgba(0, 0 ,0, 0.3);
   padding: 1rem 2rem;
   width: 16rem;
-  height: 10rem;
+  height: 15rem;
 }
 
 form > div {
